--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,23 +1,42 @@
-<%= link_to "Create ur profile", new_user_profile_path(current_user) if current_user %>
-
-
 <div class="jumbotron text-center">
     <h1> Welcome to Dev Match </h1>
     <h3>A membership site where entrepreneurs can meet developers.</h3>
 </div>
 <div class="row">
-    <div class="col-md-6">
-        <div class="well">
-          <h2 class="text-center">Basic Membership </h2> 
-          <h4> Sign Up for free and get basic access to the community. </h4><br>
-          <%= link_to "Sign Up with Basic", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
+    <% if user_signed_in? %> <%# if the user is signed in %>
+        <div class="col-md-6">
+            <div class="well">
+                <h2 class="text-center"> Your profile </h2>
+                <% if current_user.profile %> <%# if the user has a profile already, show edit profile %>
+                    <%= link_to "Edit your profile", "#", class: 'btn btn-primary btn-lg btn-block' %>
+                    <%= link_to "View your profile", user_path(current_user), class: 'btn btn-primary btn-lg btn-block' %>
+                    
+                <% else %> <%# Link to create profile page %>
+                    <%= link_to "Create ur profile", new_user_profile_path(current_user) if current_user %>
+                <% end %>
+            </div>
         </div>
-    </div>
-    <div class="col-md-6">
-        <div class="well">
-          <h2 class="text-center">Pro Membership </h2> 
-          <h4> Sign Up for the pro account for $10/month and get access to the community and contact information!</h4>
-          <%= link_to "Sign Up with Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
+        <div class="col-md-6">
+            <div class="well">
+                <h2 class="text-center"> The Community </h2>
+                <p>Visit the community to meet other developers, entrepreneurs and investors! </p>
+                <%= link_to "Visit the community","#", class: 'btn btn-primary btn-lg btn-block' %>
+            </div>
         </div>
-    </div>
+    <% else %> 
+        <div class="col-md-6">
+            <div class="well">
+                <h2 class="text-center">Basic Membership </h2> 
+                <h4> Sign Up for free and get basic access to the community. </h4><br>
+                <%= link_to "Sign Up with Basic", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="well">
+                <h2 class="text-center">Pro Membership </h2> 
+                <h4> Sign Up for the pro account for $10/month and get access to the community and contact information!</h4>
+                <%= link_to "Sign Up with Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
+            </div>
+        </div>
+    <% end %>
 </div>
