--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
             <div class="well">
                 <h2 class="text-center"> Your profile </h2>
                 <% if current_user.profile %> <%# if the user has a profile already, show edit profile %>
-                    <%= link_to "Edit your profile", "#", class: 'btn btn-primary btn-lg btn-block' %>
+                    <%= link_to "Edit your profile", edit_user_profile_path(current_user), class: 'btn btn-primary btn-lg btn-block' %>
                     <%= link_to "View your profile", user_path(current_user), class: 'btn btn-primary btn-lg btn-block' %>
                     
                 <% else %> <%# Link to create profile page %>
