--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,8 @@
  *= require_tree .
  *= require_self
  */
+ .bg-image {
+    background-image: image-url('grey.jpg');
+    background-repeat: no-repeat;
+    background-size: 150%;
+}
