--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Dev Match</title>
+  <title>Dev Meet</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag "https://js.stripe.com/v2/", type: 'text/javascript' %>
   <%= javascript_include_tag 'application' %>
   <%= tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body class="bg-image">
 <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
   <div class='container'>
     <div class="navbar-header">
@@ -20,7 +20,7 @@
       </button>
       <%= link_to root_path, class: 'navbar-brand' do %>
         <i class="fa fa-users"></i>
-        Dev Match
+        Dev Meet
       <% end %>
     </div>
     <div class="collapse navbar-collapse" id="main-nav-collapse">
@@ -41,6 +41,7 @@
       </ul>
     </div><!-- /.navbar-collapse -->
   </div>
+</div>
 </nav>
 <div class="container">
   <% flash.each do |key, value| %>
