--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,9 @@
-<div class="jumbotron text-center">
-    <h1> Welcome to Dev Match </h1>
-    <h3>A membership site where entrepreneurs can meet developers.</h3>
-</div>
-<div class="row">
+<div class="bg-image">
+    <div class="jumbotron text-center">
+        <h1> Welcome to Dev Meet </h1>
+        <h3>A membership site where entrepreneurs can meet developers.</h3>
+    </div>
+    <div class="row">
     <% if user_signed_in? %> <%# if the user is signed in %>
         <div class="col-md-6">
             <div class="well">
@@ -40,4 +41,5 @@
             </div>
         </div>
     <% end %>
+    </div>
 </div>
