--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center"><b>Edit your Profile</b></h1>
-        <p class="text-center"> Be a part of Dev Match community and fill out your profile!</p>
+        <p class="text-center"> Be a part of Dev Meet community and fill out your profile!</p>
         <div class="well">
             <%= render 'form' %>
         </div>
